--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    //    "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "build": "ng build",
+    "preinstall": "npm install -g http-server",
+    "postinstall": "ng build --prod",
+    "start": "http-server dist/"
   },
   "private": true,
   "dependencies": {
