--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "build": "ng build",
-    "preinstall": "npm install -g http-server",
-    "postinstall": "ng build --prod",
-    "start": "http-server dist/"
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
