--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular-cli": "^1.0.0-beta.28.3",
     "angular-in-memory-web-api": "~0.1.1",
+    "angular2-notifications": "^0.4.53",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.6.10",
+    "ng2-notifications": "^0.3.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
