--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "build": "ng build",
-    "start": "ng serve"
+    "local-start": "ng serve",
+    "start": "http-server ./ -p ${PORT:=5000} -c-1",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/common": "^2.3.1",
+    "http-server": "*",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
@@ -49,5 +52,9 @@
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3"
+  },
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
   }
 }
