--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^2.3.1",
-    "http-server": "*",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
@@ -23,12 +22,14 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ngtools/webpack": "^1.2.4",
     "angular-cli": "^1.0.0-beta.28.3",
     "angular-in-memory-web-api": "~0.1.1",
     "angular2-notifications": "^0.4.53",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.6.10",
+    "http-server": "*",
     "ng2-notifications": "^0.3.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
